# MusicGenerator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Documentation/: ImplementationDocument.md  SpecificationDocument.md  TestingDocument.md
Documentation/WeeklyReports/: WeeklyReport1.md  WeeklyReport2.md  WeeklyReport3.md  WeeklyReport4.md  WeeklyReport5.md  WeeklyReport6.md
models/: markov_model.json  markov_order1.json
src/: data_collection.py  main_v2.py  main_v3.py  markov_model.py  playback.py  preprocess.py  test_generator.py  testing.py  training.py  ui_version2.py  ui_version3.py  validation.py
src/1-Data_colection_and_preprocessing/: 2-preprocess.py
src/1-Data_collection_and_preprocessing/: preprocess_2.py
src/1-Data_collection_and_preprocessing/Tests/: data_collection_test.py  preprocess_test.py
src/2-Training_Validation_Testing/Tests/: training_test.py
src/3-Generator-and-UI/: main.py  playback.py  ui.py
src/3-Generator_and_UI/: markov_generator.py  ui.py
src/3-Generator_and_UI/Tests/: markov_generator_test.py  playback_test.py  ui_test.py
